--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,10 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.23",
+    "eslint": "^9.39.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "vite": "^5.4.21"
+    "vite": "^7.3.1"
   },
   "description": "",
   "main": "postcss.config.js",
