--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "canvas-confetti": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.71.1",
     "react-router-dom": "^6.21.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
