--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -49,3 +49,7 @@ uritemplate==4.2.0
 urllib3==2.6.3
 uvicorn==0.40.0
 Pillow==10.1.0
+matplotlib==3.8.2
+reportlab==4.0.8
+pandas==2.1.4
+python-multipart==0.0.6
