--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ click==8.3.1
 colorama==0.4.6
 distro==1.9.0
 ecdsa==0.19.1
+easyocr==1.7.2
 fastapi==0.128.0
 google-ai-generativelanguage==0.6.15
 google-api-core==2.25.2
@@ -25,8 +26,10 @@ httplib2==0.31.0
 httpx==0.28.1
 idna==3.11
 jiter==0.12.0
+opencv-python==4.8.1.78
 openai==2.15.0
 passlib==1.7.4
+pillow==10.1.0
 proto-plus==1.27.0
 protobuf==5.29.5
 pyasn1==0.6.1
@@ -36,6 +39,7 @@ pydantic_core==2.41.5
 pyparsing==3.3.1
 python-dotenv==1.2.1
 python-jose==3.5.0
+reportlab==4.0.9
 requests==2.32.5
 rsa==4.9.1
 six==1.17.0
@@ -43,6 +47,8 @@ sniffio==1.3.1
 SQLAlchemy==2.0.45
 starlette==0.50.0
 tqdm==4.67.1
+torch==2.1.2
+torchvision==0.16.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uritemplate==4.2.0
